// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Transfer 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / Transfer 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Deposit16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M14 2h-4V0h4a2 2 0 012 2v12a2 2 0 01-2 2h-4v-2h4v-1H0V3h14V2zM2 5h12v6H2V5z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InternalTransfer16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M1 4.5h12v2.172l-1-1V8.5l1.995 1.995.996-.995H15v-.009l1-1V5.663l-1 1V2.5H1v2z"
        fill="currentColor"
      />
      <path
        d="M9.5 8a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z"
        fill="currentColor"
      />
      <path
        d="M3 11.495h12v2H1V9.334l-1 1V7.505l1-1v-.01h.009l.996-.995L4 7.495v2.829l-1-1v2.171z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LinkedAccounts16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15.07 6.586l-3.535 3.535-1.414-1.414 3.536-3.535-2.829-2.829L7.293 5.88 5.878 4.464 9.414.93a2 2 0 012.828 0l2.829 2.828a2 2 0 010 2.829zM.929 12.243a2 2 0 010-2.829L4.464 5.88l1.414 1.414-3.535 3.535 2.828 2.829 3.536-3.536 1.414 1.415-3.536 3.535a2 2 0 01-2.828 0L.929 12.243z"
        fill="currentColor"
      />
      <path
        d="M6.586 10.828l4.242-4.242-1.414-1.414-4.242 4.242 1.414 1.414z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        MonthlySavings16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M4.5 1v.5h7v-1h1v1h3v14H.5v-14h3v-1h1V1zm-1 2v-.5h-2v3h13v-3h-2v1h-1v-1h-7v1h-1V3zM2 6.5h-.5v8h13v-8H2zm10.5 5a1 1 0 11-2 0 1 1 0 012 0z"
        fill="currentColor"
        stroke="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Swish16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M12.531 1.387l.394.308a8 8 0 01-5.082 14.302l-.288-.01.017-1a5.499 5.499 0 003.481-9.672l-.188-.154-.185-.139-.644-.442 2.495-3.193zM8.163 0l.273.01-.008 1a5.499 5.499 0 00-3.481 9.672l.188.155.185.138.644.442-2.495 3.193-.394-.307A8 8 0 017.572.01l.3-.011h.291z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SwishFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M12.531 1.387l.394.308a8 8 0 01-5.082 14.302l-.288-.01.017-1a5.499 5.499 0 003.481-9.672l-.188-.154-.185-.139-.644-.442 2.495-3.193zM8.163 0l.273.01-.008 1a5.499 5.499 0 00-3.481 9.672l.188.155.185.138.644.442-2.495 3.193-.394-.307A8 8 0 017.572.01l.3-.011h.291z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Transactions16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M13.001 7h-2.828l2-2H1V3h11.173l-2-2H13L16 3.999V4L13.001 7zM2.999 9h2.828l-2 2H15v2H3.827l2 2H3L0 12.001V12L2.999 9z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Trustly16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M15 2v4.91h-4.819V14H5.274v-2.727L8.545 8 5.273 4.727V6.91H1V2h14z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Withdraw16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 6.5a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M2 14h4v2H2a2 2 0 01-2-2V2a2 2 0 012-2h4v2H2v1h14v10H2v1zm12-3H2V5h12v6z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Transfer 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Deposit24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 9a3 3 0 100 6 3 3 0 000-6zm-1 3a1 1 0 112 0 1 1 0 01-2 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M20 21h-4v2h4a3 3 0 003-3V4a3 3 0 00-3-3h-4v2h4a1 1 0 011 1v1H1v14h20v1a1 1 0 01-1 1zM3 7h18v10H3V7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InternalTransfer24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 11a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M22.5 12.082l1.499-1.5v2.829l-2.502 2.502L19 13.414v-2.828l1.5 1.5V7H1.5V5h21v7.082zM0 10.59v2.828l1.5-1.5V19h21v-2h-19v-5.086l1.5 1.5v-2.828L2.502 8.087 0 10.59z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LinkedAccounts24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M2.808 18.364a3 3 0 010-4.243L7.051 9.88l1.414 1.414-4.242 4.243a1 1 0 000 1.414l2.828 2.828a1 1 0 001.414 0l4.243-4.242 1.414 1.414-4.243 4.242a3 3 0 01-4.242 0l-2.829-2.828zM21.193 5.636a3 3 0 010 4.243l-4.242 4.242-1.415-1.414 4.243-4.243a1 1 0 000-1.414L16.95 4.222a1 1 0 00-1.415 0l-4.242 4.242L9.879 7.05l4.243-4.242a3 3 0 014.243 0l2.828 2.828z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M15.536 9.879L9.88 15.536 8.465 14.12l5.657-5.657 1.414 1.415z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        MonthlySavings24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M7 11H5v2h2v-2zM5 16h2v2H5v-2zM11 11H9v2h2v-2zM13 11h2v2h-2v-2zM11 16H9v2h2v-2zM13 16h2v2h-2v-2zM19 11h-2v2h2v-2zM18 18.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M7 0v1h10V0h2v1h4v22H1V1h4V0h2zm0 3h10v1h2V3h2v3H3V3h2v1h2V3zM3 8v13h18V8H3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Swish24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16.849 7.55l-.009-.008-.008-.007-.26-.212-.016-.013-.016-.013-.254-.19-.017-.013-.018-.012-.008-.006L18.4 4.315c4.136 3.441 4.815 9.571 1.48 13.84a9.978 9.978 0 01-3.785 2.97 8.567 8.567 0 001.924-1.806c2.832-3.625 2.285-8.817-1.17-11.77zM7.15 16.448l.009.007.008.007.26.213.016.013.016.012.254.19.017.013.018.012.008.006L5.6 19.683c-4.136-3.441-4.815-9.57-1.48-13.84h0a9.967 9.967 0 013.782-2.967A8.568 8.568 0 005.98 4.679c-2.832 3.625-2.285 8.817 1.17 11.77z"
        fill="currentColor"
        stroke="currentColor"
        strokeWidth={2}
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SwishFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16.849 7.55l-.009-.008-.008-.007-.26-.212-.016-.013-.016-.013-.254-.19-.017-.013-.018-.012-.008-.006L18.4 4.315c4.136 3.441 4.815 9.571 1.48 13.84a9.978 9.978 0 01-3.785 2.97 8.567 8.567 0 001.924-1.806c2.832-3.625 2.285-8.817-1.17-11.77zM7.15 16.448l.009.007.008.007.26.213.016.013.016.012.254.19.017.013.018.012.008.006L5.6 19.683c-4.136-3.441-4.815-9.57-1.48-13.84h0a9.967 9.967 0 013.782-2.967A8.568 8.568 0 005.98 4.679c-2.832 3.625-2.285 8.817 1.17 11.77z"
        fill="currentColor"
        stroke="currentColor"
        strokeWidth={2}
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Transactions24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16.173 11H19L23 7.001V7L19.001 3h-2.828l3 3H3v2h16.173l-3 3zM7.827 13H5L1 16.999v.002L4.999 21h2.828l-3-3H21v-2H4.827l3-3z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Trustly24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M22.5 3v7.364h-7.228V21H7.91v-4.09L12.82 12l-4.91-4.91v3.274H1.5V3h21z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Withdraw24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 9a3 3 0 100 6 3 3 0 000-6zm-1 3a1 1 0 112 0 1 1 0 01-2 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M4 3h4V1H4a3 3 0 00-3 3v16a3 3 0 003 3h4v-2H4a1 1 0 01-1-1v-1h20V5H3V4a1 1 0 011-1zm17 4v10H3V7h18z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Transfer 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Deposit32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M13 16a3 3 0 116 0 3 3 0 01-6 0zm2 0a1 1 0 112 0 1 1 0 01-2 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M21 28h5a1 1 0 001-1v-3H3V8h24V5a1 1 0 00-1-1h-5V2h5a3 3 0 013 3v22a3 3 0 01-3 3h-5v-2zm6-18H5v12h22V10z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InternalTransfer32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={33}
    >
      <path
        d="M2 9h27v9.172l-2-2V19l3 3 3-3v-2.828l-2 2V7H2v2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M17 20a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 100-4 2 2 0 000 4z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M4 23h27v2H2V13.828l-2 2V13l3-3 3 3v2.828l-2-2V23z"
        fill="currentColor"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LinkedAccounts32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={33}
    >
      <path
        d="M28.492 8.222a3 3 0 010 4.242l-6.128 6.129-1.414-1.415 6.128-6.128a1 1 0 000-1.414l-4.714-4.714a1 1 0 00-1.414 0l-6.128 6.128-1.414-1.414 6.128-6.128a3 3 0 014.242 0l4.715 4.714zM3.508 23.778a3 3 0 010-4.242l6.128-6.129 1.414 1.415-6.128 6.128a1 1 0 000 1.414l4.714 4.714a1 1 0 001.414 0l6.128-6.128 1.415 1.414-6.129 6.128a3 3 0 01-4.242 0l-4.714-4.714z"
        fill="currentColor"
      />
      <path
        d="M13.172 20.714l7.542-7.542-1.414-1.415-7.543 7.543 1.415 1.414z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        MonthlySavings32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M10 15H7v-2h3v2zM7 20h3v-2H7v2zM10 25H7v-2h3v2zM12 15h3v-2h-3v2zM15 20h-3v-2h3v2zM12 25h3v-2h-3v2zM20 15h-3v-2h3v2zM17 20h3v-2h-3v2zM20 25h-3v-2h3v2zM22 15h3v-2h-3v2zM25 20h-3v-2h3v2zM23.5 25.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M22 2H10V1H8v1H2v28h28V2h-6V1h-2v1zM8 5V4H4v4h24V4h-4v1h-2V4H10v1H8zm20 5H4v18h24V10z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Swish32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M7.381 27.032l3.471-4.443c-.258-.17-.511-.351-.759-.545-4.874-3.808-5.738-10.846-1.93-15.72a11.178 11.178 0 018.617-4.303 13.983 13.983 0 00-11.812 5.36c-4.76 6.093-3.68 14.89 2.413 19.65zm0 0l.024-.03M24.619 4.968l-.024.03m.024-.03l-3.471 4.443c.258.17.511.351.759.545 4.874 3.808 5.738 10.846 1.93 15.72a11.178 11.178 0 01-8.617 4.303 13.984 13.984 0 0011.812-5.36c4.76-6.093 3.68-14.89-2.413-19.65z"
        fill="transparent"
        stroke="currentColor"
        strokeWidth={2}
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SwishFill32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M6.76574 27.8208L10.485 23.0604C10.2084 22.8788 9.93707 22.6844 9.6717 22.4771C4.44923 18.3969 3.52327 10.8555 7.60351 5.63304C9.91882 2.66957 13.3486 1.08956 16.8367 1.02266C12.1021 0.762555 7.32111 2.74596 4.18051 6.76575C-0.919801 13.2938 0.237649 22.7205 6.76574 27.8208Z"
        fill="currentColor"
      />
      <path
        d="M25.2356 4.18051L21.5163 8.94094C21.7929 9.1225 22.0643 9.3169 22.3296 9.52423C27.5521 13.6045 28.4781 21.1458 24.3978 26.3683C22.0825 29.3318 18.6528 30.9118 15.1646 30.9787C19.8992 31.2388 24.6802 29.2554 27.8208 25.2356C32.9211 18.7075 31.7637 9.28081 25.2356 4.18051Z"
        fill="currentColor"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Transactions32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M21.173 15H24l5-5-5-5h-2.828l4 4H7v2h18.173l-4 4zM9.828 17H7l-5 5 5 5h2.828l-4-4h18.173v-2H5.828l4-4z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Trustly32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M1 4h30v11h-9v13H10v-6.414L15.586 16 12 12.414V15H1V4zm2 2v7h7V7.586L18.414 16 12 22.414V26h8V13h9V6H3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Withdraw32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M19 16a3 3 0 11-6 0 3 3 0 016 0zm-2 0a1 1 0 11-2 0 1 1 0 012 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M11 4H6a1 1 0 00-1 1v3h24v16H5v3a1 1 0 001 1h5v2H6a3 3 0 01-3-3V5a3 3 0 013-3h5v2zM5 22h22V10H5v12z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
</div>
`;
